# ChangeLog for net-libs/webkit-gtk
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/webkit-gtk/ChangeLog,v 1.309 2015/01/25 11:59:10 pacho Exp $

  25 Jan 2015; Pacho Ramos <pacho@gentoo.org> -webkit-gtk-2.4.7-r200.ebuild,
  -webkit-gtk-2.4.7.ebuild, webkit-gtk-2.4.8-r200.ebuild,
  webkit-gtk-2.4.8.ebuild:
  gir-nvidia-hangs.patch was not really working and, also, upstream supposedly
  fixed the bug in a different way also in 2.4.8 (not only 2.6.x)

  25 Jan 2015; Agostino Sarubbo <ago@gentoo.org> webkit-gtk-2.4.8-r200.ebuild,
  webkit-gtk-2.4.8.ebuild:
  Stable for x86, wrt bug #536234

  25 Jan 2015; Agostino Sarubbo <ago@gentoo.org> webkit-gtk-2.4.8-r200.ebuild,
  webkit-gtk-2.4.8.ebuild:
  Stable for amd64, wrt bug #536234

  21 Jan 2015; Pacho Ramos <pacho@gentoo.org>
  +files/webkit-gtk-2.4.8-wayland-webkit2.patch,
  -files/webkit-gtk-2.2.4-unittests-build.patch,
  -files/webkit-gtk-2.2.5-sparc64-build.patch,
  -files/webkit-gtk-2.4.6-gstreamer-check.patch, -webkit-gtk-2.2.6-r1.ebuild,
  -webkit-gtk-2.2.6-r201.ebuild, -webkit-gtk-2.4.4-r1.ebuild,
  -webkit-gtk-2.4.4-r201.ebuild, webkit-gtk-2.4.8-r200.ebuild,
  webkit-gtk-2.4.8.ebuild:
  Fix building with x11+wayland (#536898 by Reinis Danne and Denis Lisov), drop
  old

*webkit-gtk-2.4.8 (14 Jan 2015)
*webkit-gtk-2.4.8-r200 (14 Jan 2015)

  14 Jan 2015; Pacho Ramos <pacho@gentoo.org> +webkit-gtk-2.4.8-r200.ebuild,
  +webkit-gtk-2.4.8.ebuild:
  Version bump

  31 Dec 2014; Gilles Dartiguelongue <eva@gentoo.org> webkit-gtk-2.6.4.ebuild:
  Drop gles2 & wayland support following up current upstream status, bug
  #533704. X useflag is now not an option anymore due to wayland being removed.
  Make gtk-doc optional in contradiction with teams policy because upstream did
  some hackery that does not use gtkdoc to manipulate gtk-doc (yay :/), bug
  #533622.

*webkit-gtk-2.6.4 (22 Dec 2014)
