@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install postinst postrm preinst prepare pretend setup test unpack
+DEPEND=>=dev-libs/glib-2.36.0:2 >=dev-libs/libxml2-2.8:2 >=dev-libs/libxslt-1.1.7 virtual/jpeg:0= >=media-libs/harfbuzz-0.9.18:=[icu(+)] >=media-libs/libpng-1.4:0= media-libs/libwebp:= >=dev-libs/icu-3.8.1-r1:= >=media-libs/fontconfig-2.8:1.0 >=media-libs/freetype-2.4.2:2 >=net-libs/libsoup-2.42:2.4[introspection?] >=x11-libs/cairo-1.10.2:=[X] >=x11-libs/gtk+-3.6.0:3[X,introspection?] dev-db/sqlite:3= >=x11-libs/pango-1.30.0.0 x11-libs/libXrender x11-libs/libXt >=x11-libs/gtk+-2.24.10:2 egl? ( media-libs/mesa[egl] ) geoloc? ( >=app-misc/geoclue-2.1.5:2.0 ) gstreamer? ( >=media-libs/gstreamer-1.2:1.0 >=media-libs/gst-plugins-base-1.2:1.0 ) introspection? ( >=dev-libs/gobject-introspection-1.32.0 ) libsecret? ( app-crypt/libsecret ) opengl? ( virtual/opengl ) spell? ( >=app-text/enchant-0.22:= ) webgl? ( x11-libs/cairo[opengl] x11-libs/libXcomposite x11-libs/libXdamage ) || ( >=dev-lang/python-2.7.5-r2:2.7 ) >=dev-lang/perl-5.10 || ( virtual/rubygems[ruby_targets_ruby20] virtual/rubygems[ruby_targets_ruby21] virtual/rubygems[ruby_targets_ruby19] ) >=app-accessibility/at-spi2-core-2.5.3 >=dev-libs/atk-2.8.0 >=dev-util/gtk-doc-am-1.10 >=dev-util/gperf-3.0.1 >=sys-devel/bison-2.4.3 >=sys-devel/flex-2.5.34 || ( >=sys-devel/gcc-4.7 >=sys-devel/clang-3.3 ) sys-devel/gettext virtual/pkgconfig doc? ( >=dev-util/gtk-doc-am-1.10 ) geoloc? ( dev-util/gdbus-codegen ) introspection? ( jit? ( sys-apps/paxctl ) ) test? ( dev-lang/python:2.7 dev-python/pygobject:3[python_targets_python2_7] x11-themes/hicolor-icon-theme jit? ( sys-apps/paxctl ) ) sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) app-arch/xz-utils >=sys-apps/sed-4 test? ( !prefix? ( x11-base/xorg-server[xvfb] ) x11-apps/xhost )
+DESCRIPTION=Open source web browser engine
+EAPI=5
+HOMEPAGE=http://www.webkitgtk.org/
+IUSE=coverage doc +egl +geoloc +gstreamer +introspection +jit libsecret +opengl spell +webgl test
+KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux ~x86-macos
+LICENSE=LGPL-2+ BSD
+RDEPEND=>=dev-libs/glib-2.36.0:2 >=dev-libs/libxml2-2.8:2 >=dev-libs/libxslt-1.1.7 virtual/jpeg:0= >=media-libs/harfbuzz-0.9.18:=[icu(+)] >=media-libs/libpng-1.4:0= media-libs/libwebp:= >=dev-libs/icu-3.8.1-r1:= >=media-libs/fontconfig-2.8:1.0 >=media-libs/freetype-2.4.2:2 >=net-libs/libsoup-2.42:2.4[introspection?] >=x11-libs/cairo-1.10.2:=[X] >=x11-libs/gtk+-3.6.0:3[X,introspection?] dev-db/sqlite:3= >=x11-libs/pango-1.30.0.0 x11-libs/libXrender x11-libs/libXt >=x11-libs/gtk+-2.24.10:2 egl? ( media-libs/mesa[egl] ) geoloc? ( >=app-misc/geoclue-2.1.5:2.0 ) gstreamer? ( >=media-libs/gstreamer-1.2:1.0 >=media-libs/gst-plugins-base-1.2:1.0 ) introspection? ( >=dev-libs/gobject-introspection-1.32.0 ) libsecret? ( app-crypt/libsecret ) opengl? ( virtual/opengl ) spell? ( >=app-text/enchant-0.22:= ) webgl? ( x11-libs/cairo[opengl] x11-libs/libXcomposite x11-libs/libXdamage )
+REQUIRED_USE=geoloc? ( introspection ) introspection? ( gstreamer )
+SLOT=4/37
+SRC_URI=http://www.webkitgtk.org/releases/webkitgtk-2.6.5.tar.xz
+_eclasses_=check-reqs	a7f404bfb16e0a996700c5d3ac4edad3	cmake-utils	0e29eadbd656185bce30d2449ab48035	eutils	998e5931fb95b10a6a11ec796ada2759	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	c263990f1b677b0f0be0a3299f179762	gnome.org	8fef8f967214f56e08fa92d61163d891	gnome2	29582087e5f16ca16b1c6815c2ae2b65	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	pax-utils	dfe060cb70d89757fde5c1ff8405e950	python-any-r1	da352ea9da8eb9bf158d56cca65d6c82	python-utils-r1	7d5f4ad9ba85664d8c5f56041a70f4c3	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f	virtualx	73cfc129b4b9ba23aed1abb10c825d86
+_md5_=b3b9e184d49043ce66488e8adf16ce49
