@@ -20,15 +20,17 @@ AUX webkit-gtk-2.6.0-ia64-malloc.patch 1066 SHA256 0733f634b13bdd62828ded8b5cd6a
 AUX webkit-gtk-2.6.0-ia64-platform.patch 637 SHA256 050218d8ab6076447ff7cfe2cebad4f4f3ad57b418bc3eeadb8d40d601877add SHA512 d8c5278a35ee3b163366919bfc31862163777af178a1054e86bd32580bad74251398bd3534203eb751770b30689c3c45f571377e93287946a2bba25e6e8a4d12 WHIRLPOOL c8f767aaeb040e0dbfcdc0dc378f43f6ba3bedaf9d53334bbe0393d7db59d14426e3d1a6eb865bb01ee53c571998b9bbd0ebeddca1b6668b815c1dad1d806b57
 DIST webkitgtk-2.4.8.tar.xz 9827632 SHA256 68f11559cb178679ca92acc9e3a3d7febede7acb7b98afd7fb761875bbc6bd23 SHA512 31b8b87142730aa27e5bd4fe85b0de2116fd492ef469592512c185d60df428a9913d6c2738ce57439bf9db10864ed9c121ddbc2a4da2f715818a70885c81c0de WHIRLPOOL 851e3973c00096dd3a98e64bfa9f9f0f278c3513656af9a9aa72442cd6c594119adefafa6c06d05e431ec77bf6e9f1e10432e9b6895d777adfe2952843602ef2
 DIST webkitgtk-2.6.4.tar.xz 9996524 SHA256 beef5e24edd9b9cade22d80bf373c74d236f996fe30f49f8697a70f267772e9b SHA512 242ab90ceff5b83978dd5bb8f0b8e05a7daa1fbbe87657ef0404facb17b873f3d703aed838f364bc042f2848b8cca300f1126f4d6979fed34235efa40e44d5d8 WHIRLPOOL 12f74b6e7188a92a2c5b656720e99937ac0c3f941ff83bdde5cf1cf671c61b8dc248d45a216dd1d821c684364bda0a43b38964efc3c0cb16ce2a1674963d95ee
+DIST webkitgtk-2.6.5.tar.xz 10000124 SHA256 b1658017cea7cc545b9e01f22af585986e21e4242825e215bc5f8e0c0dc67593 SHA512 b8097e16ccfe10c75e43d81a965a14bde19dcefa6f1ac6ef52c075afeb4c603289c3e7cad05b02af053728df16b5681aafa248e5974319849a0967364bca1f19 WHIRLPOOL 60b0cfccefef0f90ba66f3e89819239574f06e42d2508055843addcf20292747d82d258332bb95ae2730a3c11a2acd74ca595f3f2a3cd54230013e4320a6b6d8
 EBUILD webkit-gtk-2.4.8-r200.ebuild 10110 SHA256 2ac7b2c28f1cb4116caaabb1539309df50252a9ba9ea20744b7fb094433a87a8 SHA512 2a4b3b218b95ca47de1fbf0b709f477f3aca987e1ff9d6ec5dda24cc7df481ede73b0ab204b5e06a87f4f49a5de80c165d371fe448d9c5cd07e048fd31d4adda WHIRLPOOL 4eaf38a522b0801be13f95eb515a5263b11ea03124de7aa3951367c6a83728c084be479bd0b0075a2440bebf0d325c0629bb69d548f0ce3a2f03b62e33a82146
 EBUILD webkit-gtk-2.4.8.ebuild 10567 SHA256 df16a846bad0095714cb4764d7d8beac18ef07574c1a43d4fb20f7c81bc6d375 SHA512 b42add49629b9e33ee61f32f11d45e47998540089e5f6e1fc9331ef22dbabb7d11946f0a9fd7a50eb894ad2243e1ef71d2488dddb87bd1c557c414ded4a60f1b WHIRLPOOL 664db817f0f8a5ecf69d335220fcb84ca484a207be57a79b0b0ec98a929f92a04118f91e53c6f604d6cfef3a74ad19c62f4164e307a88f647f44702d79f48bb3
 EBUILD webkit-gtk-2.6.4.ebuild 6657 SHA256 8c5b33458648d660ba259929586fa4d3085f592b41a4575d0ec494f54a7dbf0f SHA512 10fd8057454623f7447c792baaedab8aef96a6883b26022820bdb0704003a1dab13d52a351109c2a6c46b23a52859fb7f415c50545905ec59686a769ce1c4776 WHIRLPOOL 42e0b38e15dabebc63b6fee2cd950f7fcbc2c1ae04dab72108fa93b3a01d56453731c119c6cec2c4ed9d58c8a48220fba37b11c35fa976be9b666055532c67b5
-MISC ChangeLog 64967 SHA256 8901399e9f333d4d126c9f2bcfbed1933f5c1135a4b21237668f2fa862d1ed4b SHA512 1992898e9b9bc3677a9634944375e1f47d2f25a252655e0da46c9cc999881a81f410df73da66d8e480d8570955a8f8ad290351e620b9dac1ec7aaca48e9f91ab WHIRLPOOL 6fa9c1b93e37eba8b3773c582b03bfdbafb489baf0ae29c742d9944eb58fc475242264ea767072f4f43a8345d4ba57dc90eed86f76c39eb958e65be3025072e3
+EBUILD webkit-gtk-2.6.5.ebuild 6590 SHA256 ae896e7ffd6c517cf39155c1ad8ebe1aebcc87350a405172aacca234fdef2d8e SHA512 9d3590482db432b4d125fa270c307c3eeff6d3f1ab208ae85fe978c28d6c8fd250029d2140e94fff226f899d874648345d24fbb9ac745b4740ad543e3b6f77e7 WHIRLPOOL b8ccea2e1ac8712afd00f5ca48be176c3d18a9fd89f2c8ad3ec422761d1e77323bc340f26c8ab3ccf4b2d16191c4ff123d4f3fdc2ed60a2ff4e9476a127f2699
+MISC ChangeLog 65088 SHA256 4336927b86bfa53980e98ecf961c926b5412c33ae1fc1adba4181815f9521c80 SHA512 ef06f56e5decf4f634fbbf23bf4f6c9aa1d2f4d1f31bd1ed0244c8a094a5cc49347c849003dbdc0962658fd30baaeb707b1ad0b20a0f9629d0bb330c744c01e3 WHIRLPOOL 4c6ebc61b305b74f77264c03f1ee7fbe74f3586a2c7615a6cd1942ac3749264b88ee0e04fc110bd6e60f463566609ed4d64a829859e948fb9954da517b1466ea
 MISC metadata.xml 610 SHA256 23faf3368df312d51e2dd38d6e7695410deab694bc12558cbe9751067575df11 SHA512 ac78b2e8a719247f5294c045ead7731cd42fb7200ea5a6a450ac18abd3a79fc888045e2c7f98bf984dd2a9484fc352ebc06e6b1c7a0bdd75a65a825e71c09188 WHIRLPOOL f2c88de8a7889cd3cdbb66f498067f85a5e6ce0c7b3732299ad9373e39ac332abe5d3da93f8fbe1e5f63b44306f9def006a3e34349eaca12ee9fb3b7a7368ea1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlTE2o8ACgkQCaWpQKGI+9R41wCfVFY4jQt6ior565faplf+u0ef
-HMQAn2gmJuyxcHiOEX/GPku4IA2PcYd+
-=tDwV
+iEYEAREIAAYFAlTGpr0ACgkQCaWpQKGI+9SeXwCfXkL7/qs8kGxw09tsyG0XnCOQ
+CIgAniQbd+rw6LWv6iZBtaZ9CJ7vWUM5
+=A1NX
 -----END PGP SIGNATURE-----
